--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("GKXthumb.jpg");
+    background-color: red
     background-repeat:no-repeat;
     background-size:100%;
     height: 125vh;  
