--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: red
+    background-image: url(".png");
     background-repeat:no-repeat;
     background-size:100%;
     height: 125vh;  
